# gent

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: index.tsx  shutdown-manager.ts  test.ts
src/agent/: agent.ts  agents-prompt.ts  config.ts  execute-tool.ts  index.ts  init-prompt.ts  paths.ts  process-manager.ts  serializer.ts  skills-prompt.ts  system-prompt.md  system-prompt.ts  tools.ts
src/gent/: agent.py  cli.py  config_reader.py  execute_tool.py  litellm_compat.py  main.py  run_command_tool.py  system_prompt.py  tools.py
src/tui/: app.tsx  assistant-part-message.tsx  execute-tool-part-message.tsx  generic-tool-part-message.tsx  input.tsx  markdown.ts  messages.tsx  spinner-message.tsx  tool-part-message.tsx  use-agent.ts  use-input-state.ts  user-part-message.tsx  welcome.tsx
